[gd_scene load_steps=2 format=3 uid="uid://wvp7kf6j0s7s"]

[ext_resource type="Script" uid="uid://cy01d43mt2pkn" path="res://pixel_simulation.gd" id="1_22pjc"]

[node name="PixelSimulation" type="Node2D"]
script = ExtResource("1_22pjc")

[node name="Display" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(178, 362.00006)
scale = Vector2(2, 2)

[node name="Display2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(778, 351)
scale = Vector2(2, 2)

[node name="Step" type="Button" parent="."]
offset_left = 528.0
offset_top = 185.0
offset_right = 571.0
offset_bottom = 216.0
text = "Step"

[node name="Swap" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Swap"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="pressed" from="Step" to="." method="_on_step_pressed"]
[connection signal="pressed" from="Swap" to="." method="_on_swap_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
